--- a/carcinoma_classifier.ipynb
+++ b/carcinoma_classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOH+GjtCBg/5lghMYAJ3Kb"
+      "authorship_tag": "ABX9TyOK+CwzLUDww/7d6VW+F8yL"
     },
     "kernelspec": {
       "name": "python3",
@@ -52,6 +52,123 @@
       "metadata": {
         "id": "Wx2WqUuYi3yM"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Importations"
+      ],
+      "metadata": {
+        "id": "-ek9Z_BRahDw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importation\n",
+        "\n",
+        "# preprocessing\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# dimentionality reduction\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# models\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn import tree\n",
+        "\n",
+        "# evaluations\n",
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import multilabel_confusion_matrix\n",
+        "\n",
+        "# others\n",
+        "from sklearn.tree import export_text\n",
+        "import plotly.graph_objects as go"
+      ],
+      "metadata": {
+        "id": "COfTI_00Qvna"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Preprocessings"
+      ],
+      "metadata": {
+        "id": "pjoo27Pdaoo8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LXDU5HLnOnTN",
+        "outputId": "853d5170-4ec6-4984-f7a5-fd2405b0ea01"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1845,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
+      "source": [
+        "#labels importation and preprocessing\n",
+        "train_label = pd.read_csv(\"/data/train_label.tsv\", sep='\\t')\n",
+        "train_labels = train_label.X_primary_disease\n",
+        "train_labels.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#features importation and preprocessing\n",
+        "train_data = pd.read_csv(\"/data/train_data.tsv\", sep='\\t')\n",
+        "train_data = train_data.T\n",
+        "train_data = train_data.tail(-1)\n",
+        "print(\"Before processing: \",train_data.shape)\n",
+        "train_data_1 = train_data.dropna()\n",
+        "print(\"After_1 processing: \",train_data_1.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z8g9klf_RtXM",
+        "outputId": "9fb13c12-68f7-4041-cb04-d38e0d809702"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before processing:  (1845, 16340)\n",
+            "After_1 processing:  (1845, 16340)\n"
+          ]
+        }
+      ]
     }
   ]
 }
